@@ -86,6 +86,7 @@
     * 4084 FIX: Improved error handling in case of broken hosts.mk files
     * 4130 FIX: Improved error handling when trying to edit not existant rules
     * 4131 FIX: Fixed broken WATO site login when using password containing special characters...
+    * 4133 FIX: Do not suppress site specific global issues during WATO activation
 
     Notifications:
     * 4042 FIX: Fix missing From address in synchronous SMTP notifications...
